--- a/basic-project/src/App.css
+++ b/basic-project/src/App.css
@@ -26,3 +26,34 @@
   top: 30px;
   font-weight: bold;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.counter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px solid orange;
+}
+
+.counter:hover {
+  background-color: orange;
+}
+
+.number {
+  font-size: 7rem;
+}
+
+.button {
+  font-size: 2rem;
+  padding: 0.2rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background-color: orangered;
+}
